// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeighborhoodDescriptionMessage component should render empty message 1`] = `
<li
  class="MuiListItem-root makeStyles-neighborhoodMessage-30 MuiListItem-gutters MuiListItem-alignItemsFlexStart"
>
  <div
    class="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="MuiListItemText-root"
  >
    <span
      class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-alignLeft"
      />
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft"
      />
    </span>
  </div>
</li>
`;

exports[`NeighborhoodDescriptionMessage component should render test message 1`] = `
<li
  class="MuiListItem-root makeStyles-neighborhoodMessage-138 MuiListItem-gutters MuiListItem-alignItemsFlexStart"
>
  <div
    class="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="MuiListItemText-root"
  >
    <span
      class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-alignLeft"
      >
        Test
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft"
      >
        This is a test
      </p>
    </span>
  </div>
</li>
`;
